@@ -34,9 +34,11 @@
 <dl><dd>
 
 <p>Camlp5 is a preprocessor-pretty-printer of OCaml.<br/>
-It is compatible with OCaml versions from 1.07 to 4.10.0.</p>
+It is (theoretically) compatible with all versions of ocaml from 1.07
+to 4.10.0 (when they compile), and jocaml 3.12.0 to 3.12.1, but
+maintainers only test against versions of ocaml >= 4.00.0.</p>
 
-<p>The current distributed version is <b>7.10</b> (released 2019-08-25).</p>
+<p>The current distributed version is <b>7.11</b> (released 2010-02-03).</p>
 
 <p>
 <a href="README.md">README</a><br/>
@@ -54,8 +56,10 @@ It is compatible with OCaml versions from 1.07 to 4.10.0.</p>
 compile.</p>
 
 <p>Download the sources:
-  <a href="https://github.com/camlp5/camlp5/archive/rel710.tar.gz">camlp5-rel710.tar.gz</a>.</p>
+  <a href="https://github.com/camlp5/camlp5/archive/rel711.tar.gz">camlp5-rel711.tar.gz</a>.</p>
 
+Alternatively, checkout the Git repository from:
+  <a href="https://github.com/camlp5/camlp5">camlp5/camlp5</a>
 
 <p>Browse the <a href="doc/htmlc/">documentation</a>.</p>
 
